--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,18 @@ services:
       - '4000:4000'
     env_file: ./golang/.env   
     networks:
-      - main    
+      - main 
+  # mytheresa_symfony:
+  #   container_name: mytheresa_symfony
+  #   build:
+  #     context: ./symfony
+  #     dockerfile: ./deploy/Dockerfile
+  #   command: symfony server:start
+  #   ports:
+  #     - '8000:8000'
+  #   # env_file: ./golang/.env   
+  #   networks:
+  #     - main   
 networks:
   main:
     driver: bridge
