--- a/symfony/.env
+++ b/symfony/.env
@@ -14,6 +14,6 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=7ad213335ce5441d1c75015896279ed9
 ###< symfony/framework-bundle ###
